# clarinet

./: .env.test.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .venv  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FILE_REGISTRY_REFACTOR.md  FLOW_REFACTOR_PLAN.md  FLOW_TEST_ERROR.md  FRONTEND_PLAN.md  FRONT_REFACTOR.md  Makefile  PLAN_FILE_SCHEMA.md  README.md  REFACTOR_PIPELINE.md  RETROSPECTIVE_CONFIG_REFACTOR.md  SQLMODEL_0.0.25_COMPATIBILITY_REPORT.md  TASK_RENAME.md  TODO_AUTHENTIFICATION.md  TODO_PLAN_20260326.md  TODO_TESTS.md  add_admin_plan.md  alembic.ini  approach_of_multimodel.md  docker-compose.test.yml  front_build_refactor.md  plan_auth_improve.md  pyproject.toml  refactor.md  refactor_documentation.md  refactor_request_body.md  run_tests.sh  schemathesis.toml  settings.frontend.toml  settings.toml.example  todo_slicer.md
.claude/: settings.json
.claude/agents/: git-commit-agent.md  python-developer-agent-improved.md  python-developer.md
.claude/commands/: bump.md  logs.md
.claude/hooks/: bash-anti-patterns.sh  block-branch-switch.sh  pr-monitor.sh  pr-watch.sh  require-worktree-agent.sh  require-worktree.sh  uv-sync.sh  worktree-stop.sh  worktree-venv.sh
.claude/rules/: README.md  api-deps.md  api-urls.md  ci-debugging.md  custom-code-loading.md  e2e-tests.md  file-registry.md  frontend-page-contract.md  frontend-reference.md  frontend-routing-forms.md  frontend.md  logging-pii.md  pipeline-ops.md  pr-review.md  project-setup.md  record-data-api.md  record-data-validator.md  record-repo.md  recordflow-dsl.md  release.md  schema-hydration.md  schemathesis.md  slicer-context.md  slicer-helper-api.md  test-debugging.md
.github/workflows/: badges.yml  ci.yml  frontend-build.yml  release.yml
alembic/: README  env.py
alembic/versions/: 5b74817834d0_initial_schema.py
clarinet/: CLAUDE.md  __init__.py  __main__.py  client.py  flow.py  scripting.py  settings.py  types.py
clarinet/api/: CLAUDE.md  app.py  auth_config.py  dependencies.py  exception_handlers.py  masking.py  middleware.py  ohif_config.py
clarinet/cli/: anon.py  anon_scrub.py  deploy.py  main.py  templates.py
clarinet/config/: CLAUDE.md  __init__.py  custom_registry.py  path_uniqueness.py  plan_package.py  primitives.py  python_loader.py  reconciler.py  toml_exporter.py
clarinet/deploy/: clarinet-api.service.template  clarinet-worker@.service.template
clarinet/docs/: file-registry.md  migration-orientation-0.10.17.md  pipeline-ops.md  project-setup.md  recordflow-dsl.md  slicer-helper-api.md
clarinet/exceptions/: __init__.py  base.py  domain.py  http.py
clarinet/files/: __init__.py  _anon.py  _checksums.py  _fs.py  _patterns.py  _resolver.py  _storage.py  _template.py  facade.py
clarinet/frontend/: CLAUDE.md  README.md  __init__.py  gleam.toml  manifest.toml
clarinet/models/: CLAUDE.md  __init__.py  admin.py  auth.py  base.py  capability.py  counter.py  file_schema.py  patient.py  pipeline_definition.py  pipeline_task_run.py  quarto_report.py  record.py  record_event.py  record_type.py  report.py  study.py  uniqueness.py  user.py
clarinet/ohif/: .gitignore  app-config.js
clarinet/repositories/: CLAUDE.md  __init__.py  base.py  file_definition_repository.py  file_repository.py  patient_repository.py  pipeline_definition_repository.py  pipeline_task_run_repository.py  record_event_repository.py  record_repository.py  record_type_repository.py  report_repository.py  series_repository.py  study_repository.py  user_repository.py
clarinet/services/: admin_service.py  anonymization_service.py  file_validation.py  photo_service.py  quarto_render.py  quarto_report_service.py  record_data_validation.py  record_service.py  record_type_service.py  report_service.py  schema_hydration.py  session_cleanup.py  study_service.py  user_service.py
clarinet/static/: clarinet_frontend.js
clarinet/utils/: admin.py  agent_scaffold.py  anon_resolve.py  auth.py  bootstrap.py  config_loader.py  database.py  db_manager.py  dicom.py  fastapi_users_db.py  file_checksums.py  file_link_sync.py  file_patterns.py  file_registry_resolver.py  fs.py  graph_validation.py  logger.py  markdown.py  migrations.py  pagination.py  path_template.py  quarto_discovery.py  session.py  (+9 more)
deploy/: CLAUDE.md
docs/: DICOM_CLIENT.md  dicom_association_optimization.md  file-registry-analysis.md  gap_analysis_demo_liver.md  grid-workflows.md  image-service.md  orthanc-dicomweb-proxy.md  plan-recordflow-entity-triggers.md  quarto-reports.md  session-debugging.md  sse-migration-plan.md  sse-migration-tasks.md  sse-presence-plan.md  websocket-migration-plan.md  websocket-migration-tasks.md
examples/: .env.example  dicom_client_example.py
scripts/: build_frontend.sh  build_ohif.sh  bump.sh  check-no-direct-working-folder.sh  generate_badges.py  run_tests.sh  seed_dev_data.py  slicer_label_lesions.py  vm-run-tests.sh  vm-test-all.sh
src/: CLAUDE.md  __main__.py  client.py  exceptions.py  flow.py  settings.py  types.py
tasks/: api_child_type.toml  api_cycle_child.toml  api_no_parent.toml  api_updatable.toml  new_test_type.toml  test_edit_type.schema.json  test_edit_type.toml
tests/: CLAUDE.md  __init__.py  config.py  conftest.py  test_agent_scaffold.py  test_anon_path.py  test_anon_resolve.py  test_anonymization_orchestrator.py  test_anonymization_task.py  test_anonymizer.py  test_auth_cache.py  test_auth_logging.py  test_bootstrap_capabilities.py  test_cache_filler.py  test_call_function_registry.py  test_capabilities.py  test_cli_anon_migrate.py  test_cli_quarto_install.py  test_client.py  test_config_loader.py  test_config_loading.py  test_config_primitives.py  test_convert_series_task.py  test_correspondence.py  test_db_manager.py  test_db_scrub.py  test_dicom_cmove.py  test_dicom_operations.py  test_dicom_semaphore.py  test_dicomweb_cache.py  test_dicomweb_cleanup.py  test_dicomweb_converter.py  test_dicomweb_service.py  test_dicomweb_settings.py  test_exception_handler_logging.py  test_file_accessor.py  test_file_checksums.py  test_file_patterns.py  test_file_registry_resolver.py  test_file_repository.py  (+64 more)
(+817 files in other folders)
