[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarinet"
version = "0.0a.25"
description = "Clarinet - A Framework for Clinical Trials with heavy radiology modalities usage"
readme = "README.md"
authors = [
    {name = "Denis Nesterov"}
]
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sqlmodel>=0.0.34",
    "pydicom>=2.3.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "jinja2>=3.1.2",
    "requests>=2.28.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.1",
    "loguru>=0.7.0",
    "faststream>=0.3.0",
    "jinja-markdown>=1.0.0",
    "pytest-asyncio>=1.1.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "fastapi-users>=13.0.0",
    "greenlet>=3.0.0",
    "pynetdicom>=3.0.4",
    "cachetools>=7.0.0",
    "tomli-w>=1.2.0",
    "taskiq>=0.12.0",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.0.0",
    "numpy>=1.24.3",
    "nibabel>=5.0.0",
    "scikit-image>=0.20.0",
    "pynrrd>=1.0.0",
    "dicom-anonymizer>=1.0.0",
    "faststream[rabbit]>=0.3.0",
    "asyncpg>=0.29.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
performance = [
    "uvloop>=0.22.1",
    "httptools>=0.6.0",
    "orjson>=3.10.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0"
]

[project.scripts]
clarinet = "clarinet.cli.main:main"

[project.urls]
Repository = "https://github.com/radionest/clarinet"
Issues = "https://github.com/radionest/clarinet/issues"

[tool.hatch.build.targets.wheel]
packages = ["clarinet"]
exclude = [
    "clarinet/frontend/src",
    "clarinet/frontend/test",
    "clarinet/frontend/scripts",
    "clarinet/frontend/gleam.toml",
    "clarinet/frontend/manifest.toml",
]

[tool.hatch.build]
artifacts = [
    "clarinet/static/**/*",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.15.0",
    "ruff",
    "schemathesis>=4.14.1",
    "pytest-cov>=4.1.0",
    "types-jsonschema>=4.23.0.20241208",
    "types-aiofiles>=24.1.0.20250822",
    "prek>=0.3.6",
    "pytest-xdist>=3.5.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.4.0",
    "psycopg2-binary>=2.9",
]

e2e = [
    "pytest-playwright>=0.6",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
exclude = ["tests", "clarinet/frontend/build"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "pydicom.*",
    "nibabel.*",
    "nrrd.*",
    "skimage.*",
    "pynetdicom.*",
    "dicom_anonymizer.*",
    "faststream.*",
    "authlib.*",
    "jinja_markdown.*",
    "schemathesis.*",
    "pydantic_settings.*",
    "alembic.*",
    "orjson",
    "orjson.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cachetools.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--json-report --json-report-file=/tmp/clarinet-test-report.json"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 30
log_level = "WARNING"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "dicom: tests requiring a live DICOM PACS server",
    "slicer: tests requiring a running 3D Slicer instance (deselect with '-m \"not slicer\"')",
    "pipeline: tests for pipeline task queue service",
    "schema: API schema testing with Schemathesis (property-based)",
    "migration: database migration tests (Alembic upgrade/downgrade)",
]
filterwarnings = [
    # FastAPI + aiormq: asyncio.iscoroutinefunction deprecated in Python 3.14
    "ignore::DeprecationWarning:fastapi",
    "ignore::DeprecationWarning:aiormq",
    # pydicom v4.0 deprecations (write_like_original, is_little_endian, is_implicit_VR)
    "ignore:.*write_like_original.*:DeprecationWarning:pydicom",
    "ignore:.*is_little_endian.*:DeprecationWarning:pydicom",
    "ignore:.*is_implicit_VR.*:DeprecationWarning:pydicom",
    # pydicom UserWarnings: fake UIDs in tests + ANONYMIZED encoding
    "ignore:.*Invalid value for VR UI.*:UserWarning:pydicom",
    "ignore:.*Unknown encoding.*:UserWarning:pydicom",
    # pynetdicom unclosed sockets (connection timeout in negative tests)
    "ignore::ResourceWarning:pynetdicom",
    # SQLAlchemy async cleanup race condition in e2e tests
    "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
    # nrrd: datetime.utcnow() deprecated in Python 3.12+
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning:nrrd",
    # sqlmodel._compat: pydantic validator "deprecated" warning
    "ignore:deprecated:DeprecationWarning:sqlmodel._compat",
    # starlette: HTTP_422_UNPROCESSABLE_ENTITY renamed to HTTP_422_UNPROCESSABLE_CONTENT
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]
