[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarinet"
version = "0.10.15"
description = "Clarinet — an imaging-centric framework for clinical research"
readme = "README.md"
authors = [
    {name = "Denis Nesterov"}
]
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sqlmodel>=0.0.34",
    "pydicom>=2.3.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "python-multipart>=0.0.31",
    "bcrypt>=4.0.1",
    "loguru>=0.7.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "fastapi-users>=13.0.0",
    "pynetdicom>=3.0.4",
    "cachetools>=7.0.0",
    "tomli-w>=1.2.0",
    "taskiq>=0.12.0",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.0.0",
    "numpy>=1.24.3",
    "nibabel>=5.0.0",
    "scikit-image>=0.20.0",
    "scipy>=1.10.0",
    "pynrrd>=1.0.0",
    "dicom-anonymizer>=1.0.0",
    "asyncpg>=0.29.0",
    "jsonschema>=4.23.0",
    "psycopg2-binary>=2.9",
    "simpleitk>=2.5.3",
    "markdown>=3.5",
    "nh3>=0.2",
    "openpyxl>=3.1",
    "orjson>=3.10.0",
    "pyyaml>=6.0",
    # Quarto report kernel (*.qmd python chunks): the unconditional imports of
    # quarto's bundled jupyter engine (nbformat, nbclient, jupyter_client) plus
    # the kernel itself (ipykernel) and pandas, which the docs promise to chunk
    # authors. papermill / jupyter-cache deliberately omitted: optional quarto
    # features (--execute-params, cache) that the renderer does not expose.
    "nbformat>=5.0",
    "nbclient>=0.9",
    "jupyter-client>=8.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    # Typed report DataFrames: `clarinet quarto gen-types` emits pandera
    # schemas the *.qmd chunks import (coerce=True restores the dtypes a CSV
    # round-trip loses). Base dep, not an extra: the render kernel imports it.
    "pandera>=0.24",
]

[project.optional-dependencies]
performance = [
    "uvloop>=0.22.1",
    "httptools>=0.6.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0"
]
quarto = []  # kernel deps moved to base; stub keeps `clarinet[quarto]` installs working (removal: #348)

[project.scripts]
clarinet = "clarinet.cli.main:main"

[project.urls]
Repository = "https://github.com/radionest/clarinet"
Issues = "https://github.com/radionest/clarinet/issues"

[tool.uv]
# Security floors for transitive deps Dependabot flags but we don't require
# directly. Keeps future `uv lock --upgrade` from relocking into vulnerable
# ranges. Each floor is the first patched release for the CVE; raise on new
# alerts.
constraint-dependencies = [
    "aiohttp>=3.14.0",          # via taskiq
    "cryptography>=48.0.1",     # via pyjwt[crypto] -> fastapi-users; GHSA-537c-gmf6-5ccf
    "starlette>=1.3.1",         # via fastapi; CVE-2026-48817/48818/54282/54283
]

[tool.hatch.build.targets.wheel]
packages = ["clarinet"]
exclude = [
    "clarinet/frontend/src",
    "clarinet/frontend/test",
    "clarinet/frontend/scripts",
    "clarinet/frontend/gleam.toml",
    "clarinet/frontend/manifest.toml",
]

[tool.hatch.build]
artifacts = [
    "clarinet/static/**/*",
    "clarinet/docs/**/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "requests>=2.28.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.15.0",
    "ruff",
    "schemathesis>=4.14.1",
    "pytest-cov>=4.1.0",
    "types-jsonschema>=4.23.0.20241208",
    "types-aiofiles>=24.1.0.20250822",
    "scipy-stubs>=1.17",
    "prek>=0.3.6",
    "pytest-xdist>=3.5.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.4.0",
]

e2e = [
    "pytest-playwright>=0.6",
]

[tool.mutmut]
# Mutation testing, intentionally scoped to the RecordFlow comparison core —
# pure business logic exercised by fast unit tests (no DB / external services).
# `source_paths` copies the package into mutants/ so imports resolve;
# `only_mutate` restricts which file is actually mutated. mutmut is run
# ephemerally (not a project dependency) — see `make test-mutation`.
source_paths = ["clarinet"]
only_mutate = ["clarinet/services/recordflow/flow_result.py"]
pytest_add_cli_args_test_selection = ["tests/test_recordflow_dsl.py"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests", "clarinet/frontend/build"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "clarinet.services.image.*",
    "clarinet.services.slicer.*",
    "clarinet.services.dicom.*",
]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
# 3D Slicer runtime imports — only available inside Slicer's embedded Python.
# SimpleITK has no published type stubs.
module = [
    "ctk",
    "qt",
    "slicer",
    "slicer.*",
    "vtk",
    "vtk.*",
    "vtkSegmentationCorePython",
    "DICOMLib",
    "DICOMLib.*",
    "SimpleITK",
    "SimpleITK.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pydicom.*",
    "nibabel.*",
    "nrrd.*",
    "skimage.*",
    "pynetdicom.*",
    "dicom_anonymizer.*",
    "authlib.*",
    "schemathesis.*",
    "pydantic_settings.*",
    "alembic.*",
    "markdown",
    "markdown.*",
    "nh3",
    "nh3.*",
    "yaml",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cachetools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--json-report --json-report-file=/tmp/clarinet-test-report.json"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 30
log_level = "WARNING"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "dicom: tests requiring a live DICOM PACS server",
    "slicer: tests requiring a running 3D Slicer instance (deselect with '-m \"not slicer\"')",
    "pipeline: tests for pipeline task queue service",
    "schema: API schema testing with Schemathesis (property-based)",
    "migration: database migration tests (Alembic upgrade/downgrade)",
    "demo: interactive Slicer demos (not part of CI, requires Slicer + PACS)",
    "postgres_only: tests requiring real PostgreSQL backend (skipped on SQLite)",
    "xdist_group: serialize tests sharing a resource (pytest-xdist)",
]
filterwarnings = [
    # FastAPI + aiormq: asyncio.iscoroutinefunction deprecated in Python 3.14
    "ignore::DeprecationWarning:fastapi",
    "ignore::DeprecationWarning:aiormq",
    # pydicom v4.0 deprecations (is_little_endian/is_implicit_VR used by tests for fake datasets)
    "ignore:.*is_little_endian.*:DeprecationWarning:pydicom",
    "ignore:.*is_implicit_VR.*:DeprecationWarning:pydicom",
    # pydicom UserWarnings: fake UIDs in tests + ANONYMIZED encoding
    "ignore:.*Invalid value for VR UI.*:UserWarning:pydicom",
    "ignore:.*Unknown encoding.*:UserWarning:pydicom",
    # pynetdicom unclosed sockets (connection timeout in negative tests)
    "ignore::ResourceWarning:pynetdicom",
    # SQLAlchemy async cleanup race condition in e2e tests
    "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
    # nrrd: datetime.utcnow() deprecated in Python 3.12+
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning:nrrd",
    # sqlmodel._compat: pydantic validator "deprecated" warning
    "ignore:deprecated:DeprecationWarning:sqlmodel._compat",
]
